--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     </div>
 </section>
 <!-- Skills Section -->
-<section id="skills" class="py-20 bg-gray-50"></section>
+<section id="skills" class="py-20 bg-gray-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-16">
             <h2 class="text-3xl font-bold text-gray-800 mb-4">Technical Skills</h2>
